syntax = "proto3";

package alex1472.ozon_film_service.film_service.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "pkg/film-service;film_service";

service FilmService {
  rpc GetCategoryById (GetCategoryByIdRequest) returns (GetCategoryByIdResponse);
}

message Category {
  uint64 id  = 1;
  string name = 2;
}

message GetCategoryByIdRequest {
  uint64 id = 1 [(validate.rules).uint64.gt = 0];
}


message GetCategoryByIdResponse {
  Category category = 1;
}